Criei toda estrutura, porém teremos que mexer mais ainda

--- a/Menu Principal/CSS/estrutura.css
+++ b/Menu Principal/CSS/estrutura.css
@@ -8,20 +8,38 @@ body{
     height: 100vh;
     text-align: center;
     align-items: center;
+    margin: 0;
+}
+
+nva{
+    position: fixed;
+    width: 100%;
+    top:0;
+}
+section{
+    background-image: url(../IMG/OIG4.jfif);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: center;
+    margin-top: 0;
+    margin-top: -20px;
 }
 .ancora{
     text-decoration: none;
     border: 2px solid black;
     border-radius: 15px;
     background: var(--gold);
-    font-size: 25px;
+    font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 80px;
-    margin: 20px;
-    width: 5vw;
-    height: 10vh;
+    margin: 70px;
+    width: 130px;
+    height: 40px;
+    color: black;
+}
+.ancora:hover{
+    color: white;
 }
 .logo-ml{
     width: 20vh;
@@ -30,5 +48,42 @@ body{
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid black;
-    
+    margin-bottom: -10;
+}
+
+.sobre{
+    background-color: rgba(255, 255, 255, 0.562);
+    height: 20vh;
+    width: 60vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin: auto;
+    border-radius: 20px;
+}
+
+.cliente{
+    background-color: rgba(255, 255, 255, 0.582);
+    height: 20vh;
+    width:100vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin: auto;
+    border-radius: 20px;
+}
+
+footer{
+    margin-top: 50px;
+}
+.contatos{
+    height: 40px;
+    margin-right: 50px;
+}
+.icones{
+    display: flex;
+    justify-content: end;
+}
+.title-sobre,.avaliacao{
+    padding-top: 100px;
 }
