--- a/Menu Principal/CSS/estrutura.css
+++ b/Menu Principal/CSS/estrutura.css
@@ -1,36 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
-:root{
-    --gold:#ebe2b5;
+
+:root {
+    --gold: #ebe2b5;
 }
 
-body{
+body {
     font-family: 'Questrial', sans-serif;
     height: 100vh;
     text-align: center;
-    align-items: center;
     margin: 0;
     background-color: #EBDCAF;
 }
 
-
-section{
-    background-image: url(../IMG/OIG4.jfif);
+section {
+    background-image: url(../IMG/background-teste-1.jpg);
     background-repeat: no-repeat;
-    background-size:cover;
+    background-size: cover;
     background-position: center;
     margin-top: 0;
 }
-span{
-    background-color: black;
-    height: 100px;
-    width: 100%;
-}
-.menu-principal{
+
+.menu-principal {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
-.ancora{
+
+.ancora {
     text-decoration: none;
     border: 2px solid black;
     border-radius: 15px;
@@ -42,28 +38,34 @@ span{
     margin: 2vw;
     height: 6vh;
     width: 10vw;
-    color: black; 
-    margin-left: 8vw;
-}
-.links{
-    display: flex;
-    margin: auto;
-}
-.ancora:hover{
-    color: white;
-}
-.logo-ml{
-    
-}
-.menu{
-    display: flex;
-    border-bottom: 1px solid black;
-    margin-bottom: -10;
-    background-color: #EBDCAF;
-    height: 20vh;
+    color: black;
+    margin-left: 9.1vw;
 }
 
-.sobre{
+.links {
+    display: flex;
+    margin: auto;}
+
+.ancora:hover {
+    color: white;
+}
+
+.logo-ml {
+    height: auto;
+    width: 13vw;
+    margin-left: 1vw;
+}
+
+.menu {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    background-color: #EBDCAF;
+    padding: 10px;
+    height: 16vh;
+}
+
+.sobre {
     background-color: rgba(255, 255, 255, 0.562);
     height: 20vh;
     width: 60vw;
@@ -74,10 +76,10 @@ span{
     border-radius: 20px;
 }
 
-.cliente{
+.cliente {
     background-color: rgba(255, 255, 255, 0.582);
     height: 20vh;
-    width:80vw;
+    width: 80vw;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -85,10 +87,15 @@ span{
     margin: auto;
     margin-bottom: 20px;
 }
-.contatos{
+
+.contatos {
+    margin-top: 5vh;
     height: 40px;
     margin-right: 50px;
 }
-.title-sobre,.avaliacao{
+
+.title-sobre,
+.avaliacao {
     padding-top: 50px;
+    color: rgb(0, 0, 0);
 }
