--- a/Menu Principal/CSS/estrutura.css
+++ b/Menu Principal/CSS/estrutura.css
@@ -49,7 +49,6 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: #FFF9E6;
     height: 15vh;
     gap: 1vw;
 }
@@ -93,7 +92,7 @@ header {
     width: 12vw;
     height: 6vh;
     border-radius: 50px;
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: bold;
 }
 
@@ -107,9 +106,8 @@ header {
 /* Icones dos contatos */
 .icones {
     display: flex;
-    gap: 4vw;
-    margin-top: 5vh;
-    justify-content: center;
+    justify-content:center;
+    gap: 50px;
 }
 
 .contatos {
@@ -117,8 +115,7 @@ header {
 }
 .copyright-div{
     /* margin-top: 50px; */
-    font-size: 25px;
-    
+    font-size: 0.9em;
 }
 /* criando o hamburguer menu */
 .mobile-menu {
@@ -135,8 +132,30 @@ header {
 }
 
 footer{
-    box-shadow: 10px -1px 5px #000000;
+    height: 19vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* responsividade */
 @media (max-width: 900px) {
@@ -160,6 +179,7 @@ footer{
         background: none;
         border: unset;
         font-size: 1.8em;
+        box-shadow: unset;
     }
     .logo img {
         max-width: 500px;
@@ -258,8 +278,7 @@ footer{
         border-color: #000000;
         width: 20vw;
         height: 7vh;
-        font-size: 1.2em;
-        border-style: double;
+        font-size: 1em;
     }
 
     .nav-bar button:hover{
@@ -270,9 +289,5 @@ footer{
     .nav-bar button > p{    
         color: #BBA154;
     }
-
-
-    /* reconfigurando a nav-bar para o mobile */
-
 }
 
