pequenas alterações de estruturação

--- a/Menu Principal/CSS/estrutura.css
+++ b/Menu Principal/CSS/estrutura.css
@@ -16,7 +16,7 @@ body {
 }
 
 section {
-    background-image: url(../IMG/background-teste-1.jpg);
+    background-image: url(../IMG/backgrounds/background-teste-1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
