--- a/Menu Principal/CSS/estrutura.css
+++ b/Menu Principal/CSS/estrutura.css
@@ -21,6 +21,7 @@ section {
     background-size: cover;
     background-position: center;
     margin-top: 0;
+    padding: 30px;
 }
 
 header {
@@ -115,7 +116,7 @@ header {
 }
 .copyright-div{
     /* margin-top: 50px; */
-    font-size: 0.9em;
+    font-size: 1.4em;
 }
 /* criando o hamburguer menu */
 .mobile-menu {
@@ -137,8 +138,6 @@ footer{
     flex-direction: column;
     justify-content: space-evenly;
 }
-
-
 
 
 
@@ -245,6 +244,7 @@ footer{
         background-color: #BBA154;
         box-shadow: 2px 0px 13px 6px rgba(53, 53, 53, 0.75);
         z-index: 1000;
+        border-radius: 0px 12px 12px 0px;
     }
 
     .active {
@@ -291,3 +291,24 @@ footer{
     }
 }
 
+@media (max-width: 600px) {
+
+    .logo-container{
+        display: flex;
+        margin: 0;
+    }
+
+    .flex-mobile{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .logo img{
+        width: 20vw;
+    }
+
+    .copyright-div{
+        font-size: 1.0em;
+    }
+
+}
