--- a/Menu Principal/CSS/menu-principal.css
+++ b/Menu Principal/CSS/menu-principal.css
@@ -1,28 +1,20 @@
 .menu-principal {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
 }
 
-.sobre-artista{
-    padding: 20px 0px 60px 0px;
-}
-
-.op-clientes{
-    padding-bottom: 40px;
+.sobre-artist, .op-clientes{
 }
 
 .sobre {
     text-align: justify;
-    padding: 2vw;
+    padding: 1.3vw;
     font-size: 1.2em;
 }
 
 .sobre-div {
     background-color: rgba(255, 255, 255, 0.562);
-    height: 20vh;
-    width: 60vw;
     font-size: 1.2em;
     align-items: center;
     justify-content: center;
@@ -33,6 +25,7 @@
 
 .title-sobre,
 .avaliacao {
+    font-size: 2.5em;
     color: rgb(0, 0, 0);
 }
 
@@ -55,11 +48,8 @@ ul {
 .carrosel-clientes {
     display: flex;
     background-color: rgba(255, 255, 255, 0.582);
-    height: 20vh;
-    width: 50vw;
     align-items: center;
     border-radius: 20px;
-    margin-bottom: 20px;
     font-size: 2em;
     box-shadow: 0px 5px 10px #c5c1bc;
 }
@@ -80,7 +70,6 @@ ul {
 
 .carousel-controls {
     display: flex;
-    gap: 50px;
     margin-bottom: 20px;
 }
 
@@ -88,12 +77,13 @@ ul {
     background: none;
     border: none;
     font-size: 2em;
+    padding: 20px;
     cursor: pointer;
 }
 
 @media screen and (max-width: 1360px) {
     .sobre{
-        font-size: 0.8em;
+        font-size: 1em;
     }
 }
 
@@ -113,16 +103,10 @@ ul {
     .carrosel-clientes {
         display: flex;
         background-color: rgba(255, 255, 255, 0.582);
-        height: 30vh;
-        width: 100vw;
         align-items: center;
         border-radius: 20px;
-        margin-bottom: 10px;
     }
 
-    .sobre-div {
-        width: 80vw;
-    }
 }
 
 /* Mídia Screen para telas muito pequenas (max-width: 600px) */
@@ -135,7 +119,7 @@ ul {
         font-size: 0.8em;
     }
     .sobre{
-        font-size: 0.65em;
+        font-size: 0.8em;
     }
     .sobre-div{
         height: 30vh;
