--- a/Menu Principal/CSS/estrutura.css
+++ b/Menu Principal/CSS/estrutura.css
@@ -6,11 +6,18 @@
 .logo-container{
     display: none;
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Questrial', sans-serif;
     height: 100vh;
-    text-align: center;
     margin: 0;
+    text-align: center;
     overflow-x: hidden;
     background-color: #FFF9E6;
 }
@@ -18,6 +25,7 @@ body {
 section {
     margin-top: 0;
     padding: 30px;
+    background-color: #FFF9E6;
     background-image: url(../IMG/backgrounds/background-teste-1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -29,11 +37,11 @@ header {
     z-index: 999;
     width: 100%;
     background-color: #FFF9E6;
+    box-shadow: 0px 2px 10px rgba(53, 53, 53, 0.75);
 }
 
 .rolagem {
     position: sticky;
-    box-shadow: 0px 2px 10px rgba(53, 53, 53, 0.75);
 }
 
 /* Design dos botões */
@@ -62,7 +70,7 @@ header {
 }
 
 .menu li{
-    margin: 3vw;
+    margin: 0vw 3vw;
 }
 
 /* configurando tamanho da logo */
@@ -145,11 +153,10 @@ header {
 }
 
 footer{
-    padding: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     background-color: #FFF9E6;
+    width: 100%;
 }
 
 
@@ -176,23 +183,25 @@ footer{
         overflow-x: hidden;
     }
 
-    ul{
-        padding: 0px;
-    }
     .logo-container{
         display: flex;
-        margin: auto;
+        padding-right: 40%;
     }
     .menu .logo {
         display: none;
     }
 
+    .menu li{
+        margin: auto;
+    }
+
     .ancora{
-        width: 50vw;
+        width: 54vw;
         background: none;
         border: unset;
         font-size: 1.8em;
         box-shadow: unset;
+        margin: 10px;
     }
 
     .menu{
@@ -246,10 +255,9 @@ footer{
         transition: transform 0.3s ease-in;
         position: absolute;
         top: 0;
-        left: 0;
         flex-direction: column;
         align-items: start;
-        width: 50vw;
+        width: 60vw;
         height: 100vh;
         background-color: #BBA154;
         box-shadow: 2px 0px 13px 6px rgba(53, 53, 53, 0.75);
@@ -263,12 +271,7 @@ footer{
 
     .nav-bar nav > ul{
         flex-direction: column;
-    }
-
-    .nav-bar nav > ul > li {
-        padding: 0px;
-        font-size: 90%;
-        font-weight: bold;
+        gap: 20px;
     }
 
     .nav-bar nav > ul > li > a {
@@ -278,7 +281,7 @@ footer{
 
     .nav-bar nav > ul > li > a > p{
         width: 100%;
-        padding: 25px;
+        padding: 15px;
         border-bottom: 2px solid #000000;
     }
     
@@ -286,7 +289,7 @@ footer{
     .nav-bar button{
         background-color: #fae2c2;
         border-color: #000000;
-        width: 25vw;
+        width: 30vw;
         height: 8vh;
         font-size: 1.2em;
     }
@@ -299,13 +302,18 @@ footer{
     .nav-bar button > p{    
         color: #BBA154;
     }
+
+    footer{
+        position: relative;
+    }
 }
 
 @media (max-width: 600px) {
 
     .logo-container{
         display: flex;
-        margin: 0;
+        padding-right: 0%;
+        padding-left: 55%;
     }
 
     .flex-mobile{
