--- a/Menu Principal/CSS/menu-principal.css
+++ b/Menu Principal/CSS/menu-principal.css
@@ -2,33 +2,33 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
+    height: 70vh;
 }
 
 .sobre {
     text-align: justify;
-    padding: 1.3vw;
-    font-size: 1.2em;
-    width: 60vw;
+    padding: 1.4vw;
+    font-size: 1.2vw;
 }
 
 .sobre-div {
     background-color: rgba(255, 255, 255, 0.562);
-    font-size: 1.2em;
+    width: 60vw;
+    font-size: 1.2vw;
+    display: flex;
     align-items: center;
     justify-content: center;
-    display: flex;
     border-radius: 20px;
     box-shadow: 0px 5px 10px #c5c1bc;
 }
 
 .title-sobre,
 .avaliacao {
-    font-size: 2.5em;
-    color: rgb(0, 0, 0);
+    font-size: 2.2vw;
 }
 
 /* Carrossel de avaliação */
-
 ul {
     list-style: none;
 }
@@ -40,7 +40,7 @@ ul {
 .avaliacao-li {
     text-align: justify;
     margin-top: 2vh;
-    font-size: 0.6em;
+    font-size: 1vw;
 }
 
 .carrosel-clientes {
@@ -48,7 +48,7 @@ ul {
     background-color: rgba(255, 255, 255, 0.582);
     align-items: center;
     border-radius: 20px;
-    font-size: 2em;
+    font-size: 2vw;
     box-shadow: 0px 5px 10px #c5c1bc;
     width: 50vw;
 }
@@ -75,28 +75,40 @@ ul {
 .carrosel-clientes button {
     background: none;
     border: none;
-    font-size: 2em;
+    font-size: 2vw;
     padding: 20px;
     cursor: pointer;
 }
 
 @media screen and (max-width: 1360px) {
-    .sobre{
-        font-size: 1em;
-    }
+
 }
 
 /* Mídia Screen para telas menores (max-width: 900px) */
 @media screen and (max-width: 900px) {
+
     .nome-cli {
         text-align: start;
-        font-size: 0.8em;
+        font-size: 4vw;
+    }
+    .sobre-div{
+        width: 80vw;
+    }
+    .sobre{
+        font-size: 2.5vw;
+    }
+
+    .sobre-artista, .op-clientes{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        gap: 20px;
     }
 
     .avaliacao-li {
         text-align: justify;
         margin-top: 2vh;
-        font-size: 0.6em;
+        font-size: 3vw;
     }
 
     .carrosel-clientes {
@@ -104,6 +116,13 @@ ul {
         background-color: rgba(255, 255, 255, 0.582);
         align-items: center;
         border-radius: 20px;
+        padding: 20px;
+        width: 80vw;
+    }
+
+    .title-sobre,
+    .avaliacao {
+        font-size: 4vw;
     }
 
 }
@@ -115,7 +134,7 @@ ul {
     }
     .nome-cli {
         text-align: start;
-        font-size: 0.8em;
+        font-size: 0.8vw;
     }
     .sobre{
         font-size: 0.9em;
