--- a/Menu Principal/CSS/estrutura.css
+++ b/Menu Principal/CSS/estrutura.css
@@ -56,10 +56,6 @@ body {
     margin: 0;
     text-align: center;
     overflow-x: hidden;
-    background-image: url(../IMG/backgrounds/background-teste-1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
 }
 
 section {
@@ -188,14 +184,12 @@ header {
     margin: 8px;
     border-radius: 10px;
 }
+
 footer {
-    position:sticky;
-    bottom: 0;
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding-top:5px;
-    padding-bottom: 13px;
+    padding: 5px 0px 13px 0px;
     background-color: #FFF9E6;
 }
 
