--- a/Menu Principal/CSS/menu-principal.css
+++ b/Menu Principal/CSS/menu-principal.css
@@ -1,3 +1,10 @@
+body{
+    background-image: url(../IMG/backgrounds/background-teste-1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
 .menu-principal {
     display: flex;
     flex-direction: column;
