--- a/Menu Principal/CSS/estrutura.css
+++ b/Menu Principal/CSS/estrutura.css
@@ -22,7 +22,7 @@ input:focus::-webkit-input-placeholder {
     color: transparent;
     }
     
-input{
+.restrita-input{
     text-align: center;
     margin: 10px;
     background-color: #e9dcc9;
@@ -38,6 +38,12 @@ input{
 .entrar{
     width: 5vw;
     background: #dfbf96;
+    border-radius: 5px;
+    border: none;
+    outline: unset;
+    box-shadow: 0px 4px 5px rgba(53, 53, 53, 0.75);
+    height: 2.5vh;
+    margin: 10px;
 }
 .entrar:hover{
     cursor: pointer;
@@ -56,11 +62,6 @@ body {
     margin: 0;
     text-align: center;
     overflow-x: hidden;
-}
-
-section {
-    margin-top: 0;
-    padding: 30px;
 }
 
 header {
