--- a/Menu Principal/CSS/menu-principal.css
+++ b/Menu Principal/CSS/menu-principal.css
@@ -1,3 +1,10 @@
+body{
+    background-image: url(../IMG/backgrounds/background-teste-1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
 .menu-principal {
     display: flex;
     flex-direction: column;
@@ -126,7 +133,7 @@ ul {
 @media screen and (max-width: 700px) {
     .nome-cli {
         text-align: start;
-        font-size: 0.8vw;
+        /* font-size: 0.8vw; */
     }
     .sobre{
         font-size: 1em;
@@ -141,6 +148,8 @@ ul {
         width: 80vw;
         align-items: center;
         border-radius: 15px;
+        font-size: 1.6em;
+        padding: 1vh ;
     }
 
     .sobre-div {
