--- a/Menu Principal/CSS/admin.css
+++ b/Menu Principal/CSS/admin.css
@@ -5,32 +5,29 @@ body{
     height: 100vh;
     margin: 0;
     text-align: center;
-    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.sair{
+    margin-top: 20px;
 }
 
 .add_show{
-    height: 30vh;
     width: 20vw;
     border: 2px solid black;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    text-align: justify;
-    text-align: center;
+    align-items: center;
 }
 
 .add_show input{
     margin: 10px;
     text-align: center;
+    display: flex;
+    justify-content:center;
+    align-items: center;
 }
 
 .shows-existentes{
